Cloudimage js library upgrade

--- a/view/frontend/templates/tag.phtml
+++ b/view/frontend/templates/tag.phtml
@@ -26,7 +26,7 @@ $config = $block->getConfig();
 <?php endif; ?>
 
 <!-- Add js-cloudimage-responsiv library -->
-<script src="<?= $block->escapeHtml($config->getApiUrl()) ?>"></script>
+<script src="https://scaleflex.cloudimg.io/v7/plugins/js-cloudimage-responsive/4.7.0-beta.0/plain/js-cloudimage-responsive.min.js"></script>
 
 <!-- Initialize cloudimage responsive -->
 <script>
