CloudImage library update

--- a/view/frontend/templates/tag.phtml
+++ b/view/frontend/templates/tag.phtml
@@ -25,7 +25,7 @@ $config = $block->getConfig();
 <?php endif; ?>
 
 <!-- Add js-cloudimage-responsiv library -->
-<script src="https://scaleflex.cloudimg.io/v7/plugins/js-cloudimage-responsive/4.7.0-beta.0/plain/js-cloudimage-responsive.min.js"></script>
+<script src="https://scaleflex.cloudimg.io/v7/plugins/js-cloudimage-responsive/4.7.0-beta.0/plain/js-cloudimage-responsive.min.js?vh=1ee401&func=proxy"></script>
 
 <!-- Initialize cloudimage responsive -->
 <script>
