--- a/view/frontend/templates/tag.phtml
+++ b/view/frontend/templates/tag.phtml
@@ -1,15 +1,15 @@
 <?php
 /**
- * This file is part of CloudImage Responsive
+ * This file is part of Cloudimage Responsive
  *
  * @author Alyzeo LTD <info@alyzeo.com>
- * @category CloudImage
- * @package CloudImage\Responsive\view\frontend\templates
+ * @category Cloudimage
+ * @package Cloudimage\Responsive\view\frontend\templates
  * @license BSD-3-Clause
  * @copyright Copyright (c) 2021 Cloudimage (https://www.cloudimage.io/)
  */
 
-/** @var CloudImage\Responsive\Block\Tag $block */
+/** @var Cloudimage\Responsive\Block\Tag $block */
 if ($block->isInvalidToken()):
     return;
 endif;
