Change module name and fields to configuration

--- a/view/frontend/templates/product.phtml
+++ b/view/frontend/templates/product.phtml
@@ -1,15 +1,15 @@
 <?php
 /**
- * This file is part of Cloudimage Responsive
+ * This file is part of Scaleflex Cloudimage
  *
  * @author Alyzeo LTD <info@alyzeo.com>
- * @category Cloudimage
- * @package Cloudimage\Responsive
+ * @category Scaleflex
+ * @package Scaleflex\Cloudimage
  * @license BSD-3-Clause
  * @copyright Copyright (c) 2021 Cloudimage (https://www.cloudimage.io/)
  */
 
-/** @var Cloudimage\Responsive\Block\Tag $block */
+/** @var Scaleflex\Cloudimage\Block\Tag $block */
 if ($block->isInvalidToken()):
     return;
 endif;
@@ -17,7 +17,7 @@ endif;
 <script type="text/x-magento-init">
     {
         "*": {
-            "Cloudimage_Responsive/js/product": {}
+            "Scaleflex_Cloudimage/js/product": {}
         }
     }
 </script>
