--- a/view/frontend/layout/catalog_product_view.xml
+++ b/view/frontend/layout/catalog_product_view.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0"?>
 <!--
 /**
- * This file is part of Cloudimage Responsive
+ * This file is part of Scaleflex Cloudimage
  *
  * @author Alyzeo LTD <info@alyzeo.com>
- * @category Cloudimage
- * @package Cloudimage\Responsive
+ * @category Scaleflex
+ * @package Scaleflex\Cloudimage
  * @license BSD-3-Clause
  * @copyright Copyright (c) 2021 Cloudimage (https://www.cloudimage.io/)
  */
@@ -13,8 +13,8 @@
 <page xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" layout="1column" xsi:noNamespaceSchemaLocation="urn:magento:framework:View/Layout/etc/page_configuration.xsd">
     <body>
         <referenceContainer name="product.info.media">
-            <block class="Cloudimage\Responsive\Block\Tag" name="cloud_image.responsive.product" after="-"
-                   template="Cloudimage_Responsive::product.phtml" ifconfig="cloudimage_responsive/general/active" />
+            <block class="Scaleflex\Cloudimage\Block\Tag" name="scaleflex.cloudimage.product" after="-"
+                   template="Scaleflex_Cloudimage::product.phtml" ifconfig="scaleflex_cloudimage/general/active" />
         </referenceContainer>
     </body>
 </page>
