--- a/view/frontend/templates/product.phtml
+++ b/view/frontend/templates/product.phtml
@@ -14,6 +14,9 @@ if ($block->isInvalidToken()):
     return;
 endif;
 ?>
+<script type="text/javascript">
+    window.ciEnable = true;
+</script>
 <script type="text/x-magento-init">
     {
         "*": {
