--- a/view/frontend/templates/product.phtml
+++ b/view/frontend/templates/product.phtml
@@ -14,9 +14,11 @@ if ($block->isInvalidToken()):
     return;
 endif;
 ?>
+<?php if($block->getConfig()->isFotoramaCompatibility()){ ?>
 <script type="text/javascript">
-    window.ciEnable = true;
+    window.ciFotoramaCompatibility = true;
 </script>
+<?php } ?>
 <script type="text/x-magento-init">
     {
         "*": {
