--- a/view/frontend/templates/tag.phtml
+++ b/view/frontend/templates/tag.phtml
@@ -16,39 +16,40 @@ endif;
 $config = $block->getConfig();
 ?>
 <?php if ($block->isLazyLoadingActive()): ?>
-<!-- Add lazyload library -->
-<script>
-window.lazySizesConfig = window.lazySizesConfig || {};
-window.lazySizesConfig.init = false;
-</script>
-<script src="https://cdn.scaleflex.it/filerobot/js-cloudimage-responsive/lazysizes.min.js"></script>
+    <!-- Add lazyload library -->
+    <script>
+        window.lazySizesConfig = window.lazySizesConfig || {};
+        window.lazySizesConfig.init = false;
+    </script>
+    <script src="https://cdn.scaleflex.it/filerobot/js-cloudimage-responsive/lazysizes.min.js"></script>
 <?php endif; ?>
 
 <!-- Add js-cloudimage-responsiv library -->
 <script src="https://cdn.scaleflex.it/plugins/js-cloudimage-responsive/latest/js-cloudimage-responsive.min.js"></script>
-<link rel="stylesheet" href="https://cdn.scaleflex.it/plugins/js-cloudimage-responsive/latest/js-cloudimage-responsive.min.css?vh=a076ef&func=proxy"></link>
+<link rel="stylesheet"
+      href="https://cdn.scaleflex.it/plugins/js-cloudimage-responsive/latest/js-cloudimage-responsive.min.css?vh=a076ef&func=proxy"></link>
 
 <!-- Initialize cloudimage responsive -->
 <script>
-window.ciCName = '<?= $config->getCName() ?>';
-window.ciPrerender = <?= $config->getPrerender() == 1 ? 'true' : 'false' ?>;
-window.ciRemoveV7 = <?= $config->isRemoveV7() == 1 ? 'true' : 'false' ?>;
-window.ciPreUrl = '';
+    window.ciCName = '<?= $config->getCName() ?>';
+    window.ciPrerender = <?= $config->getPrerender() == 1 ? 'true' : 'false' ?>;
+    window.ciRemoveV7 = <?= $config->isRemoveV7() == 1 ? 'true' : 'false' ?>;
+    window.ciPreUrl = '';
 
-if (window.ciPrerender) {
-    if (window.ciCName.length > 0) {
-        window.ciPreUrl = '//' + '<?= $config->getCName() ?>/'
-    } else {
-        window.ciPreUrl = '//' + '<?= $config->getToken() ?>.cloudimg.io/'
+    if (window.ciPrerender) {
+        if (window.ciCName.length > 0) {
+            window.ciPreUrl = '//' + '<?= $config->getCName() ?>/'
+        } else {
+            window.ciPreUrl = '//' + '<?= $config->getToken() ?>.cloudimg.io/'
+        }
+
+        if (!window.ciRemoveV7) {
+            window.ciPreUrl += 'v7/'
+        }
     }
 
-    if (!window.ciRemoveV7) {
-        window.ciPreUrl += 'v7/'
-    }
-}
-
-window.ciResponsive = new window.CIResponsive({<?= $block->getConfigToString() ?>});
-<?php if ($config->isLazyLoading()): ?>
-window.lazySizes.init();
-<?php endif; ?>
+    window.ciResponsive = new window.CIResponsive({<?= $block->getConfigToString() ?>});
+    <?php if ($config->isLazyLoading()): ?>
+    window.lazySizes.init();
+    <?php endif; ?>
 </script>
